Fix: info popups were cut off

--- a/design/simple/style.css
+++ b/design/simple/style.css
@@ -114,7 +114,6 @@ div.Box {
   	position: relative;
   	margin: 0px 4px 8px 4px;    
   	padding: 0px 0px 0px 0px;
-    overflow: hidden;
     word-wrap: break-word;
 }
 ul.BoxHeadline {
